# automerge-rust-sync-server

./: .gitignore  Cargo.toml  setup.sh  sync-server-dev.service  sync-server-prod.service
src/: main.rs  tracing.rs
